<resources>
    <string name="app_name">Tenacity Admin</string>
    <string name="nav_home">Home</string>
    <string name="nav_appointment">Appointment</string>
    <string name="nav_messaging">Messaging</string>
    <string name="nav_account">account</string>
    <string name="nav_exit">Exit</string>
    <string name="txt_profile">PROFILE</string>
    <string name="txt_message">Message</string>
    <string name="app_name_caption">Tenacity Tutoring</string>
    <string name="txt_landing_page_caption">Sign in</string>
    <string name="btn_login">Login</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="input_email">Email</string>
    <string name="input_password">Password</string>
    <string name="input_password_confirm"> Confirm password</string>
    <string name="input_name">Full name</string>
    <string name="input_phone_number">Phone number</string>
    <string name="text_view_welcome">Welcome back</string>
    <string name="text_view_dont_have_account">Don`t have account?</string>
    <string name="text_view_forgot_password">Forgot password?</string>
    <string name="text_view_already_have_account">Already have an account?</string>
    <string name="sign_up_caption">Sign up to have access to your mentors</string>
    <string name="text_please_wait">Please wait</string>
    <string name="desc">Description</string>
    <string name="item_status">Status</string>
    <string name="text_tor">OR</string>
    <string name="email_inputs">ABCDEFGHIJKLMNOPQRSTUVWXYZ_1234678910@abcdefghijklmnopqrstuvwxyz.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="developed_by">Developed by Thima</string>
    <string name="password_reset_caption">Please provide your email to reset your password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="str_available">Available</string>
    <string name="str_not_availbale">Not Available</string>
    <string name="input_last_name">Last name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_developed_by"><![CDATA[Developed by Thima]]></string>
    <string name="txt_more">more</string>
    <string name="txt_welcome">Welcome</string>
    <string name="txt_fab">fab_trans</string>
    <string name="txt_profil">trans_profile</string>
    <string name="txt_approve">Approve</string>
    <string name="update_update">Update</string>
    <string name="txt_title">TITLE</string>
    <string name="txt_announcement">ANNOUNCEMENT</string>
    <string name="txt_submit">SUBMIT</string>
    <string name="phone_digits">0123456789</string>
    <string name="txt_role">Role</string>
    <string name="txt_num_stud">NUMBER OF STUDENTS: %d</string>
    <string name="txt_name">NAME</string>
    <string name="txt_reject">Reject</string>
    <string name="txt_reply">Reply</string>
    <string name="txt_select_a_tutor">SELECT A TUTOR</string>
    <string name="txt_add">Add</string>
    <string name="txt_subject_name">SUBJECT NAME</string>
    <string name="txt_start_session">Start Session</string>
    <string name="txt_accept">Accept</string>
    <string name="txt_complete">Complete</string>
</resources>