<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionName="landing_page"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/title_content"
        android:layout_margin="10dp"
        >
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_welcome"
            android:textColor="@color/green_500"
            android:textStyle="bold"

            android:textSize="30sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:id="@+id/input_content"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            app:boxCornerRadiusBottomEnd="3dp"
            app:boxStrokeWidth="2dp"
            app:boxCornerRadiusBottomStart="3dp"
            app:boxCornerRadiusTopEnd="3dp"
            app:boxCornerRadiusTopStart="3dp"
            app:boxStrokeColor="@color/green_500"
            app:hintTextColor="@color/green_500"
            android:textColorHint="@color/green_500"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_email"
                android:textColor="@color/green_500"
                android:id="@+id/login_input_email"
                android:inputType="textEmailAddress"

                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            app:boxCornerRadiusBottomEnd="3dp"
            app:boxStrokeWidth="2dp"
            app:boxCornerRadiusBottomStart="3dp"
            app:boxCornerRadiusTopEnd="3dp"
            app:boxCornerRadiusTopStart="3dp"
            app:boxStrokeColor="@color/green_500"
            app:hintTextColor="@color/green_500"
            android:textColorHint="@color/green_500"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_password"
                android:textColor="@color/green_500"
                android:id="@+id/login_input_password"
                android:inputType="textPassword"

                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_forgot_password"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="end"
            android:text="@string/text_view_forgot_password"
            android:textColor="@color/white"
            app:backgroundTint="@color/green_900"

            app:cornerRadius="20dp" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn_login"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/btn_login"
            android:textColor="#ffffff"
            app:backgroundTint="@color/green_900"
            app:cornerRadius="20dp" />

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/green_500"
            android:layout_toStartOf="@+id/txtOr"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtOr"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:text="@string/text_tor"
            android:textColor="@color/green_500"
            android:textStyle="bold"
            android:textSize="20sp"

            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_toEndOf="@+id/txtOr"
            android:background="@color/green_500"
            android:layout_marginEnd="10dp"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        >
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView1"
            android:text="@string/text_view_dont_have_account"
            android:textColor="@color/green_500"
            android:textSize="20sp"
            android:layout_alignParentBottom="true"

            />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_btn_sign_up"
            android:layout_toEndOf="@+id/textView1"
            android:textColor="@color/green_500"
            android:layout_marginStart="5dp"
            android:text="@string/btn_sign_up"
            android:textSize="26sp"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>
</LinearLayout>