<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionName="landing_page"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/title_content"
        android:layout_margin="10dp"
        >
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_caption"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="20sp"
            />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                android:id="@+id/input_content"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_margin="5dp"
                    app:boxCornerRadiusBottomEnd="4dp"
                    app:boxStrokeWidth="2dp"
                    app:boxCornerRadiusBottomStart="4dp"
                    app:boxCornerRadiusTopEnd="4dp"
                    app:boxCornerRadiusTopStart="4dp"
                    app:boxStrokeColor="@color/green_500"
                    app:hintTextColor="@color/green_500"
                    android:textColorHint="@color/green_500"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_name"
                        android:textColor="@color/white"
                        android:id="@+id/sign_up_input_names"
                        android:inputType="textPersonName"

                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_margin="5dp"
                    app:boxCornerRadiusBottomEnd="4dp"
                    app:boxStrokeWidth="2dp"
                    app:boxCornerRadiusBottomStart="4dp"
                    app:boxCornerRadiusTopEnd="4dp"
                    app:boxCornerRadiusTopStart="4dp"
                    app:boxStrokeColor="@color/green_500"
                    app:hintTextColor="@color/green_500"
                    android:textColorHint="@color/green_500"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_last_name"
                        android:textColor="@color/white"
                        android:id="@+id/sign_up_input_lastname"
                        android:inputType="textPersonName"

                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_margin="5dp"
                    app:boxCornerRadiusBottomEnd="4dp"
                    app:boxStrokeWidth="2dp"
                    app:boxCornerRadiusBottomStart="4dp"
                    app:boxCornerRadiusTopEnd="4dp"
                    app:boxCornerRadiusTopStart="4dp"
                    app:boxStrokeColor="@color/green_500"
                    app:hintTextColor="@color/green_500"
                    android:textColorHint="@color/green_500"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_phone_number"
                        android:textColor="@color/white"
                        android:id="@+id/sign_up_input_phone_number"
                        android:inputType="number"

                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_margin="5dp"
                    app:boxCornerRadiusBottomEnd="4dp"
                    app:boxStrokeWidth="2dp"
                    app:boxCornerRadiusBottomStart="4dp"
                    app:boxCornerRadiusTopEnd="4dp"
                    app:boxCornerRadiusTopStart="4dp"
                    app:boxStrokeColor="@color/green_500"
                    app:hintTextColor="@color/green_500"
                    android:textColorHint="@color/green_500"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_height="wrap_content">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_email"
                        android:textColor="@color/white"
                        android:id="@+id/sign_up_input_email"
                        android:inputType="textEmailAddress"

                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:boxCornerRadiusBottomEnd="4dp"
                    app:boxStrokeWidth="2dp"
                    app:boxCornerRadiusBottomStart="4dp"
                    app:boxCornerRadiusTopEnd="4dp"
                    app:boxCornerRadiusTopStart="4dp"
                    app:boxStrokeColor="@color/green_500"
                    app:hintTextColor="@color/green_500"
                    android:textColorHint="@color/green_500"

                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_password"
                        android:textColor="@color/white"
                        android:inputType="textPassword"
                        android:id="@+id/sign_up_input_password"
                        />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:boxCornerRadiusBottomEnd="4dp"
                    app:boxStrokeWidth="2dp"
                    app:boxCornerRadiusBottomStart="4dp"
                    app:boxCornerRadiusTopEnd="4dp"
                    app:boxCornerRadiusTopStart="4dp"
                    app:boxStrokeColor="@color/green_500"
                    app:hintTextColor="@color/green_500"
                    android:textColorHint="@color/green_500"

                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_password_confirm"
                        android:textColor="@color/white"
                        android:inputType="textPassword"
                        android:id="@+id/sign_up_input_password_2"
                        />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sign_up_btn_register"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/btn_sign_up"
                    android:textColor="#ffffff"
                    app:backgroundTint="@color/green_900"
                    app:cornerRadius="20dp" />

            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/green_500"
                    android:layout_toStartOf="@+id/txtOr"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtOr"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    android:text="@string/text_view_already_have_account"
                    android:textColor="@color/green_500"
                    android:textStyle="bold"
                    android:textSize="20sp"

                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_toEndOf="@+id/txtOr"
                    android:background="@color/green_500"
                    android:layout_marginEnd="10dp"
                    android:layout_centerVertical="true"
                    />
            </RelativeLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up_btn_login"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/btn_login"
                android:textColor="#ffffff"
                app:backgroundTint="@color/green_900"
                app:cornerRadius="15dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>